Fixed z-index issues on menu

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -65,7 +65,7 @@ body {
       right: 20px;
       height: 40px;
       width: 50px;
-      z-index: 5;
+      z-index: 10001;
       background-color: transparentize($black, 0.25);
       span {
         position: absolute;
@@ -108,7 +108,7 @@ body {
       left: 0;
       width: 100%;
       height: 100px;
-      z-index: 3;
+      z-index: 10000;
       transition: .25s;
       transition-delay: .25s;
       overflow: hidden;
@@ -116,7 +116,7 @@ body {
       > ul {
         text-align: center;
         position: absolute;
-        top: 20%;
+        top: 15%;
         left: 20%;
         right: 20%;
         > li {
